April update & fix

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Christopher Arce Montero - IT Innovation | Automation | Security</title>
+    <title>Christopher Arce Montero - IT Solutions Engineer</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
@@ -16,16 +16,16 @@
         <div class="container hero-content">
             <img src="https://raw.githubusercontent.com/Carce05/Carce05/main/Profile_pic.jpg" alt="Christopher Arce Montero" class="profile-picture">
             <h1>Christopher Arce Montero</h1>
-            <h2>IT Solutions Architect | Process Optimization | Secure AI Integration</h2>
+            <h2>IT Solutions Engineer | Process Optimization | Cybersecurity </h2>
             <p class="summary">
-                Proactive IT professional specializing in designing, automating, and securing robust hybrid cloud solutions. Passionate about optimizing processes and exploring the benefits of AI while mitigating security risks. Proven ability to lead projects, manage complex systems, and drive technological advancement.
+                Proactive Systems Engineer with experience managing and optimizing hybrid and on-premise infrastructure environments. Passionate about optimizing processes and exploring the benefits of new technologies while considering security risks.
             </p>
             <div class="hero-links">
                  <a href="#contact" class="cta-button primary interactive-hover">Get in Touch</a>
-                 <a href="https://www.linkedin.com/in/christopherarcemontero" target="_blank" class="cta-button secondary interactive-hover">
+                 <a href="https://www.linkedin.com/in/christopher-arce-montero-8a56a91a5" target="_blank" class="cta-button secondary interactive-hover">
                     <i class="fab fa-linkedin icon-left"></i> LinkedIn
                  </a>
-                 <a href="[URL_TO_YOUR_FULL_CV.pdf]" target="_blank" class="cta-button secondary interactive-hover"> <i class="fas fa-file-alt icon-left"></i> View Full CV
+                 <a href="https://drive.google.com/file/d/13TsibdDZH7bALjEaniel4UXsDdDIkSm_/view?usp=drive_link" target="_blank" class="cta-button secondary interactive-hover"> <i class="fas fa-file-alt icon-left"></i> View Full CV
                  </a>
             </div>
         </div>
@@ -49,7 +49,7 @@
                     <div class="value-card interactive-hover">
                         <i class="fas fa-shield-halved card-icon secondary"></i>
                         <h3>Security & Responsibility</h3>
-                        <p>Prioritizing secure design and operation, mindful of the implications of new technologies like AI.</p>
+                        <p>Prioritizing secure design and operation, mindful of the implications of new technologies.</p>
                     </div>
                      <div class="value-card interactive-hover">
                         <i class="fas fa-arrows-spin card-icon secondary"></i>
@@ -67,17 +67,17 @@
                     <div class="expertise-card interactive-hover">
                         <i class="fas fa-cloud card-icon primary"></i>
                         <h3>Cloud & Hybrid Infrastructure</h3>
-                        <p>Designing, deploying, and managing resilient hybrid environments (Azure, GCP, On-Prem). Ensuring high availability and optimal performance for critical systems.</p>
+                        <p>Managing resilient Cloud and On-Prem environments (Azure, GCP, Microsoft 365). Ensuring optimal performance.</p>
                     </div>
                      <div class="expertise-card interactive-hover">
                          <i class="fas fa-desktop card-icon primary"></i>
                          <h3>Endpoint Management & Support</h3>
-                         <p>Administering diverse endpoint ecosystems (Windows, MacOS) using modern management solutions (Intune, JAMF, SCCM). Providing advanced technical support.</p>
+                         <p>Administering diverse endpoint operating systems using modern management solutions like Intune, JAMF or SCCM. Providing advanced technical support.</p>
                     </div>
                     <div class="expertise-card interactive-hover">
                          <i class="fas fa-user-shield card-icon primary"></i>
-                        <h3>Security Operations & Identity</h3>
-                        <p>Implementing robust security controls, threat detection (SIEM), vulnerability management, and advanced identity solutions (IAM, MFA). Experienced in backup/recovery and security framework alignment (ISO 27001/22301).</p>
+                        <h3>IAM & Security Operations</h3>
+                        <p>Expertise in Identity & Access Management, including MFA solutions. Skilled in collaborating with InfoSec teams to investigate security alerts. Experience managing cloud backup/recovery solutions and familiar with ISO 27001/22301 international standards.</p>
                     </div>
                     <div class="expertise-card interactive-hover">
                          <i class="fas fa-code card-icon primary"></i>
@@ -92,7 +92,7 @@
                     <div class="expertise-card interactive-hover">
                         <i class="fas fa-people-group card-icon primary"></i>
                         <h3>Collaboration & Documentation</h3>
-                        <p>Facilitating teamwork via shared platforms (Atlassian Suite), creating comprehensive documentation, delivering user training, and managing vendor relations.</p>
+                        <p>Facilitating teamwork via shared platforms, creating comprehensive documentation, delivering user training, and managing vendor relations.</p>
                     </div>
                 </div>
             </div>
@@ -100,15 +100,15 @@
 
         <section id="projects" class="section bg-light fade-in">
              <div class="container">
-                 <h2 class="section-title">Personal & Academic Projects</h2>
+                 <h2 class="section-title">Personal Projects</h2>
                  <div class="grid grid-2-cols">
                     <div class="project-card interactive-hover">
                         <div class="project-icon-container"><i class="fas fa-school card-icon secondary"></i></div>
                         <div class="project-content">
                             <h3>Academic System (Liceo Diurno de Guararí)</h3>
-                            <p>Led full-cycle development of the institution's academic system using MERN Stack & SCRUM. Deployed on the cloud and conducted user training. (Sep 2022 - Aug 2023)</p>
+                            <p>Led full-cycle development of the institution's academic system using MERN Stack & SCRUM. Deployed on the cloud and conducted user training.</p>
                             <div class="project-links">
-                                 <a href="[URL_GUARARI_DEMO]" target="_blank" class="project-link demo-link interactive-hover-button"> <i class="fas fa-play icon-left"></i>Live Demo
+                                 <a href="https://sacg-frontend-test.netlify.app/" target="_blank" class="project-link demo-link interactive-hover-button"> <i class="fas fa-play icon-left"></i>Live Demo
                                  </a>
                             </div>
                         </div>
@@ -119,7 +119,7 @@
                             <h3>Decentralized Task Management</h3>
                             <p>Explored blockchain concepts by building a task manager using Solidity, JS, Truffle, and Ganache.</p>
                              <div class="project-links">
-                                 <a href="[URL_TASK_MANAGER_CODE]" target="_blank" class="project-link code-link interactive-hover-button"> <i class="fab fa-github icon-left"></i>View Code
+                                 <a href="https://github.com/Carce05/DAPPTaskSite" target="_blank" class="project-link code-link interactive-hover-button"> <i class="fab fa-github icon-left"></i>View Code
                                  </a>
                             </div>
                         </div>
@@ -174,19 +174,19 @@
                         <h3>Education</h3>
                         <div class="edu-item interactive-hover">
                             <h4>Master's Degree - Cybersecurity</h4>
-                            <p>European Business School (Expected Feb 2025)</p>
+                            <p>European Business School</p>
                         </div>
                         <div class="edu-item interactive-hover">
                             <h4>Post-Graduate Diploma - Project Management</h4>
-                            <p>European Business School (Expected Feb 2025)</p>
+                            <p>European Business School</p>
                         </div>
                         <div class="edu-item interactive-hover">
                             <h4>Bachelor's Degree - Computer Systems Engineering</h4>
-                            <p>Fidélitas University (Sep 2023)</p>
+                            <p>Fidélitas University</p>
                         </div>
                          <div class="edu-item interactive-hover">
                             <h4>Technical Diploma - Computer Networking</h4>
-                            <p>Ulloa Technical High School (Nov 2019)</p>
+                            <p>Ulloa Technical High School</p>
                         </div>
                     </div>
                     <div class="certifications-list">
@@ -206,21 +206,27 @@
         <section id="hobbies" class="section bg-dark fade-in">
              <div class="container">
                 <h2 class="section-title">Beyond the Keyboard</h2>
-                <div class="grid grid-3-cols">
+                <div class="grid grid-4-cols">
                      <div class="hobby-card interactive-hover">
-                        <i class="fas fa-gamepad card-icon primary"></i>
-                        <h3>Strategic Gaming</h3>
-                        <p>Engaging in complex strategy games that challenge problem-solving and planning skills.</p>
+                        <i class="fas fa-person-hiking card-icon primary"></i>
+                        <h3>Scenery Seeking</h3>
+                       <p>Enjoying natural beauty through travelling, hiking, and outdoor activities.</p>
                     </div>
                     <div class="hobby-card interactive-hover">
                         <i class="fas fa-book card-icon primary"></i>
-                        <h3>Tech & Sci-Fi Reading</h3>
-                        <p>Exploring future technologies and imaginative worlds through books and articles.</p>
+                        <h3>Tech & Sci-Fi</h3>
+                        <p>Exploring future technologies and imaginative worlds through articles, movies or news.</p>
                     </div>
                     <div class="hobby-card interactive-hover">
-                         <i class="fas fa-person-hiking card-icon primary"></i>
-                         <h3>Nature Exploration</h3>
-                        <p>Enjoying Costa Rica's natural beauty through hiking and outdoor activities.</p>
+                        <i class="fas fa-dumbbell card-icon primary"></i>
+                        <h3>Fitness & Gym</h3>
+                        <p>
+                            Focusing on maintaining an active, healthy lifestyle through regular gym sessions.</p>
+                    </div>
+                    <div class="hobby-card interactive-hover">
+                        <i class="fas fa-gamepad card-icon primary"></i>
+                        <h3>Strategic Gaming</h3>
+                        <p>Engaging in strategy games that challenge problem-solving and planning skills.</p>
                     </div>
                 </div>
             </div>
@@ -254,7 +260,7 @@
                     <a href="mailto:arcecris123@gmail.com" class="contact-link interactive-hover">
                          <i class="fas fa-envelope icon-left"></i> arcecris123@gmail.com
                     </a>
-                    <a href="https://www.linkedin.com/in/christopherarcemontero" target="_blank" class="contact-link interactive-hover">
+                    <a href="https://www.linkedin.com/in/christopher-arce-montero-8a56a91a5" target="_blank" class="contact-link interactive-hover">
                          <i class="fab fa-linkedin icon-left"></i> LinkedIn Profile
                     </a>
                     <span class="contact-link no-hover">
