--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 Proactive Systems Engineer with experience managing and optimizing hybrid and on-premise infrastructure environments. Passionate about optimizing processes and exploring the benefits of new technologies while considering security risks.
             </p>
             <div class="hero-links">
-                 <a href="#contact" class="cta-button primary interactive-hover">Get in Touch</a>
+                 <a href="#contact-section" class="cta-button primary interactive-hover">Get in Touch</a>
                  <a href="https://www.linkedin.com/in/christopher-arce-montero-8a56a91a5" target="_blank" class="cta-button secondary interactive-hover">
                     <i class="fab fa-linkedin icon-left"></i> LinkedIn
                  </a>
@@ -252,25 +252,25 @@
             </div>
         </section>
 
-        <section id="contact" class="section static-gradient fade-in">
+        <section id="contact-section" class="section static-gradient fade-in">
             <div class="container contact-content">
-                 <h2>Let's Connect!</h2>
+                 <h2>Contact Me</h2>
                  <p>Open to new opportunities and collaborations. Feel free to reach out.</p>
-                 <div class="contact-methods">
+                 <div class="contact-methods ">
                     <a href="mailto:arcecris123@gmail.com" class="contact-link interactive-hover">
                          <i class="fas fa-envelope icon-left"></i> arcecris123@gmail.com
                     </a>
                     <a href="https://www.linkedin.com/in/christopher-arce-montero-8a56a91a5" target="_blank" class="contact-link interactive-hover">
                          <i class="fab fa-linkedin icon-left"></i> LinkedIn Profile
                     </a>
-                    <span class="contact-link no-hover">
-                         <i class="fas fa-phone icon-left"></i> +506 6138 2105
-                    </span>
+                    
+                         <a href="tel:+50661382105" class="contact-link interactive-hover">
+                             <i class="fas fa-phone icon-left"></i> +506 6138 2105
+                         </a>
                  </div>
             </div>
         </section>
     </main>
-
     <footer class="footer">
          <div class="container">
             <div class="no-js-notice">
