--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Christopher Arce Montero - IT Solutions Engineer</title>
+    <title>Christopher Arce Montero - Systems Engineer </title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
         <div class="container hero-content">
             <img src="https://raw.githubusercontent.com/Carce05/Carce05/main/Profile_pic.jpg" alt="Christopher Arce Montero" class="profile-picture">
             <h1>Christopher Arce Montero</h1>
-            <h2>IT Solutions Engineer | Process Optimization | Cybersecurity </h2>
+            <h2>Systems Administering | Automation | Cybersecurity </h2>
             <p class="summary">
                 Proactive Systems Engineer with experience managing and optimizing hybrid and on-premise infrastructure environments. Passionate about optimizing processes and exploring the benefits of new technologies while considering security risks.
             </p>
